# RaspberryPicoProjects

./: .gitignore
7SegmentDisplay/: 7SegmentDisplay.c  CMakeLists.txt
multiLed/: CMakeLists.txt  multiLed.c
